---
source: crates/parser/tests/statement_parser_test.rs
description: "UPDATE weather\n    SET temp_hi = temp_hi - 2,  temp_lo = temp_lo - 2\n    WHERE date > '1994-11-28';"
---
Parse {
    cst: SourceFile@0..95
      Update@0..6 "UPDATE"
      Whitespace@6..7 " "
      Ident@7..14 "weather"
      Newline@14..15 "\n"
      Set@15..18 "SET"
      Whitespace@18..19 " "
      Ident@19..26 "temp_hi"
      Whitespace@26..27 " "
      Ascii61@27..28 "="
      Whitespace@28..29 " "
      Ident@29..36 "temp_hi"
      Whitespace@36..37 " "
      Ascii45@37..38 "-"
      Whitespace@38..39 " "
      Iconst@39..40 "2"
      Ascii44@40..41 ","
      Whitespace@41..43 "  "
      Ident@43..50 "temp_lo"
      Whitespace@50..51 " "
      Ascii61@51..52 "="
      Whitespace@52..53 " "
      Ident@53..60 "temp_lo"
      Whitespace@60..61 " "
      Ascii45@61..62 "-"
      Whitespace@62..63 " "
      Iconst@63..64 "2"
      Newline@64..65 "\n"
      Whitespace@65..69 "    "
      Where@69..74 "WHERE"
      Whitespace@74..75 " "
      Ident@75..79 "date"
      Whitespace@79..80 " "
      Ascii62@80..81 ">"
      Whitespace@81..82 " "
      Sconst@82..94 "'1994-11-28'"
      Ascii59@94..95 ";"
    ,
    errors: [
        SyntaxError(
            "Expected Ascii59, found Whitespace",
            15..15,
        ),
        SyntaxError(
            "Invalid statement: syntax error at end of input",
            0..4,
        ),
        SyntaxError(
            "Invalid statement: syntax error at or near \"-\"",
            5..37,
        ),
    ],
    stmts: [],
}
